Add method for handling errors in setting up Crostini Container

This allows up to discriminate between container setup errors and
container startup errors in the UMA

Bug: 898043
Change-Id: I71921b6980c3f1f85c27ecee178db64a93bed232
Reviewed-on: https://chromium-review.googlesource.com/c/1295630
Reviewed-by: Nicholas Verne <nverne@chromium.org>
Commit-Queue: Renée Wright <rjwright@chromium.org>
Cr-Commit-Position: refs/heads/master@{#602225}
Former-commit-id: e7f16769af0e6f707431f426a7f9d97f6cf2f4a6